--- a/firebase.json
+++ b/firebase.json
@@ -18,9 +18,6 @@
   },
   "functions": {
     "source": "functions",
-    "runtime": "nodejs18",
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+    "runtime": "nodejs18"
   }
 }
